<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.ProfileFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarContact"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignParentTop="true"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/AppTheme.AppBarOverlay"
            app:layout_scrollFlags="scroll|enterAlways|snap">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_contact"
                android:textColor="@android:color/white"
                android:textSize="@dimen/toolbarText" />

        </android.support.v7.widget.Toolbar>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgMyAva"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="20dp"
            android:layout_below="@id/toolbarContact"
            app:civ_border_width="3dp"
            app:civ_border_color="@color/colorPrimary"
            android:src="@drawable/pas"/>

        <TextView
            android:id="@+id/tvMyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_name"
            android:layout_marginTop="30dp"
            android:layout_below="@id/toolbarContact"
            android:layout_toEndOf="@id/imgMyAva"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_nim"
            android:layout_below="@id/tvMyName"
            android:layout_toEndOf="@id/imgMyAva"
            android:textAllCaps="true"
            android:textSize="16sp"/>

        <View
            android:id="@+id/vCon"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@id/imgMyAva"
            android:background="@android:color/darker_gray"/>

        <LinearLayout
            android:layout_below="@id/vCon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:text="@string/my_number"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/email"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:text="@string/my_email"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/instagram"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:text="@string/my_ig"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/twitter"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:text="@string/my_ig"/>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>